# MUSCOD-Intro

./: my_muscod_script.sh
cartPenudlum_template/: CMakeLists.txt  cart pendulum origin.cc  model.lua
cartPenudlum_template/CMake/: FindRBDL.cmake
cartPenudlum_template/SRC/: cart_pendulum.cc
hoppingRobot_template/: CMakeLists.txt  giorgos_lösung.cc  hoppingrobot_secure.cc
hoppingRobot_template/SRC/: hoppingrobot.cc
rocketCar_template/: CMakeLists.txt
rocketCar_template/SRC/: rocketcar.cc
